RESOLVED FIXED166876
REGRESSION(r189555): ImageDocument title no longer includes the size of the image
https://bugs.webkit.org/show_bug.cgi?id=166876
Summary REGRESSION(r189555): ImageDocument title no longer includes the size of the i...
Chris Dumez
Reported 2017-01-09 19:56:10 PST
ImageDocument title no longer includes the size of the image after r189555.
Attachments
Patch (4.48 KB, patch)
2017-01-09 20:00 PST, Chris Dumez
no flags
Patch (1.38 KB, patch)
2017-01-10 10:52 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-01-09 19:56:32 PST
Chris Dumez
Comment 2 2017-01-09 20:00:06 PST
WebKit Commit Bot
Comment 3 2017-01-09 21:05:38 PST
Comment on attachment 298435 [details] Patch Clearing flags on attachment: 298435 Committed r210536: <http://trac.webkit.org/changeset/210536>
WebKit Commit Bot
Comment 4 2017-01-09 21:05:43 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5 2017-01-09 23:00:57 PST
Comment on attachment 298435 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=298435&action=review > Source/WebCore/html/ImageDocument.cpp:220 > + auto head = HTMLHeadElement::create(*this); > + rootElement->appendChild(head); Classic case where we might want a “why” comment.
Chris Dumez
Comment 6 2017-01-10 10:52:16 PST
Reopening to attach new patch.
Chris Dumez
Comment 7 2017-01-10 10:52:19 PST
WebKit Commit Bot
Comment 8 2017-01-10 12:13:20 PST
Comment on attachment 298482 [details] Patch Clearing flags on attachment: 298482 Committed r210556: <http://trac.webkit.org/changeset/210556>
WebKit Commit Bot
Comment 9 2017-01-10 12:13:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.